--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,10 +1,60 @@
+
+$primary:#3b37ff;
+
+@import "../../node_modules/bootstrap/scss/functions";
+@import "../../node_modules/bootstrap/scss/variables";
+@import "../../node_modules/bootstrap/scss/variables-dark";
+@import "../../node_modules/bootstrap/scss/maps";
+@import "../../node_modules/bootstrap/scss/mixins";
+
 // Contenido de bootstrap 
-@import "../node_modules/bootstrap/scss/functions";
-@import "../node_modules/bootstrap/scss/variables";
-@import "../node_modules/bootstrap/scss/variables-dark";
-@import "../node_modules/bootstrap/scss/maps";
-@import "../node_modules/bootstrap/scss/mixins";
 
 
 
-@import "../node_modules/bootstrap/scss/bootstrap";
+
+@import "../../node_modules/bootstrap/scss/bootstrap";
+.header-container{
+    max-width: 95%;
+    width: 100%;
+    margin: auto;
+}
+.user-icon{
+    font-size: 35px;
+}
+
+.navbar-toggler:focus{
+    box-shadow: none ;
+    border: none
+}
+
+.dropdown-menu{
+    border: none;
+}
+
+.cp{
+    cursor: pointer;
+}
+
+// Home 
+.text-home{
+    background: rgb(0,0,0);
+background: linear-gradient(90deg, rgba(0,0,0,2) 50%, rgba(0, 0, 0, 1) 80%, rgba(0, 0, 0, 1) 100%);
+   
+}
+.img__home{
+    height: 350px;
+    position: relative;
+    &::before{
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background: rgb(0,0,0);
+background: linear-gradient(90deg, rgba(0,0,0,2) 0%, rgba(59,55,255,0.5) 40%, rgba(59,55,255,0) 100%);
+    }
+    & img{
+        width: 100%;
+        height: 100%;
+        object-fit:cover;
+    }
+}
