--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,7 +9,7 @@ $primary:#3b37ff;
 
 // Contenido de bootstrap 
 
-
+@import "./Home.scss";
 
 
 @import "../../node_modules/bootstrap/scss/bootstrap";
@@ -35,26 +35,3 @@ $primary:#3b37ff;
     cursor: pointer;
 }
 
-// Home 
-.text-home{
-    background: rgb(0,0,0);
-background: linear-gradient(90deg, rgba(0,0,0,2) 50%, rgba(0, 0, 0, 1) 80%, rgba(0, 0, 0, 1) 100%);
-   
-}
-.img__home{
-    height: 350px;
-    position: relative;
-    &::before{
-        content: "";
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        background: rgb(0,0,0);
-background: linear-gradient(90deg, rgba(0,0,0,2) 0%, rgba(59,55,255,0.5) 40%, rgba(59,55,255,0) 100%);
-    }
-    & img{
-        width: 100%;
-        height: 100%;
-        object-fit:cover;
-    }
-}
