--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,20 +1,24 @@
 @charset "UTF-8";
 .text-home {
-  background: rgb(0, 0, 0);
-  background: linear-gradient(90deg, rgb(0, 0, 0) 50%, rgb(0, 0, 0) 80%, rgb(0, 0, 0) 100%);
+  max-width: 1200px;
+  min-height: 180px;
+  max-height: 400px;
+  height: 250px;
+  margin: auto;
+  color: #ffffff;
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.4)), url("../assets/img-11.jpg");
+  background-size: cover;
+  background-position: center;
+}
+
+.container-home {
+  position: relative;
+  overflow: hidden;
 }
 
 .img__home {
-  height: 350px;
-  position: relative;
-}
-.img__home::before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background: rgb(0, 0, 0);
-  background: linear-gradient(90deg, rgb(0, 0, 0) 0%, rgba(59, 55, 255, 0.5) 40%, rgba(59, 55, 255, 0) 100%);
+  max-height: 350px;
+  min-height: 180px;
 }
 .img__home img {
   width: 100%;
@@ -22,6 +26,39 @@
   object-fit: cover;
 }
 
+@media screen and (min-width: 768px) {
+  .text-home {
+    height: 350px;
+  }
+  .container-home {
+    padding: 30px;
+  }
+  .container-home::before {
+    position: absolute;
+    content: "";
+    inset: 0;
+    width: 100%;
+    height: 85%;
+    background-color: #171717;
+    z-index: -1;
+    border-radius: 12px;
+  }
+}
+@media screen and (min-width: 992px) {
+  .text-home {
+    height: 400px;
+  }
+  .container-home::before {
+    position: absolute;
+    content: "";
+    inset: 0;
+    width: 100%;
+    height: 80%;
+    background-color: #171717;
+    z-index: -1;
+    border-radius: 12px;
+  }
+}
 /*!
  * Bootstrap  v5.3.3 (https://getbootstrap.com/)
  * Copyright 2011-2024 The Bootstrap Authors
@@ -11888,6 +11925,59 @@ textarea.form-control-lg {
 
 .cp {
   cursor: pointer;
+}
+
+@media screen and (min-width: 768px) {
+  .seccions {
+    max-width: 1400px;
+    margin: auto;
+  }
+}
+label {
+  display: flex;
+  flex-direction: column;
+  width: 35px;
+  cursor: pointer;
+}
+
+label span {
+  background: #bc2525;
+  border-radius: 10px;
+  height: 3px;
+  margin: 3px 0;
+  transition: 0.4s cubic-bezier(0.68, -0.6, 0.32, 1.6);
+}
+
+span:nth-of-type(1) {
+  width: 50%;
+}
+
+span:nth-of-type(2) {
+  width: 100%;
+}
+
+span:nth-of-type(3) {
+  width: 75%;
+}
+
+input[type=checkbox] {
+  display: none;
+}
+
+input[type=checkbox]:checked ~ span:nth-of-type(1) {
+  transform-origin: bottom;
+  transform: rotatez(45deg) translate(2px, 0px);
+}
+
+input[type=checkbox]:checked ~ span:nth-of-type(2) {
+  transform-origin: top;
+  transform: rotatez(-45deg);
+}
+
+input[type=checkbox]:checked ~ span:nth-of-type(3) {
+  transform-origin: bottom;
+  width: 50%;
+  transform: translate(14px, -3px) rotatez(45deg);
 }
 
 /*# sourceMappingURL=main.css.map */
