--- a/src/sass/Home.scss
+++ b/src/sass/Home.scss
@@ -1,20 +1,29 @@
 // Home 
 .text-home{
-    background: rgb(0,0,0);
-background: linear-gradient(90deg, rgba(0,0,0,2) 50%, rgba(0, 0, 0, 1) 80%, rgba(0, 0, 0, 1) 100%);
+    max-width: 1200px;
+    min-height: 180px;
+    max-height: 400px;
+    height: 250px;
+    margin: auto;
+    color: #ffffff;
+    background-image:linear-gradient(to right, rgba(0, 0, 0, 0.5),
+     rgba(0, 0, 0, 0.4)), url("../assets/img-11.jpg") ;
+    background-size:cover;
+    background-position: center;
+    
+}
+
+.container-home{
+    position: relative;
+    overflow: hidden;
    
 }
+
 .img__home{
-    height: 350px;
-    position: relative;
-    &::before{
-        content: "";
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        background: rgb(0,0,0);
-background: linear-gradient(90deg, rgba(0,0,0,2) 0%, rgba(59,55,255,0.5) 40%, rgba(59,55,255,0) 100%);
-    }
+    max-height: 350px;
+    min-height: 180px;
+   
+    
     & img{
         width: 100%;
         height: 100%;
@@ -22,3 +31,42 @@ background: linear-gradient(90deg, rgba(0,0,0,2) 0%, rgba(59,55,255,0.5) 40%, rg
     }
 }
 
+
+@media screen and (min-width:768px) {
+    .text-home{
+        height: 350px;
+    }
+
+    .container-home{
+        padding: 30px;
+        &::before{
+            position: absolute;
+            content: "";
+            inset: 0;
+            width: 100%;
+            height:85%;
+            background-color: #171717;
+            z-index:-1;
+            border-radius: 12px;
+        }
+    }
+}
+
+@media screen and (min-width:992px) {
+    .text-home{
+        height: 400px;
+    }
+
+    .container-home{
+        &::before{
+            position: absolute;
+            content: "";
+            inset: 0;
+            width: 100%;
+            height:80%;
+            background-color: #171717;
+            z-index:-1;
+            border-radius: 12px;
+        }
+    }
+}
