--- a/src/sass/Home.scss
+++ b/src/sass/Home.scss
@@ -7,7 +7,7 @@
     margin: auto;
     color: #ffffff;
     background-image:linear-gradient(to right, rgba(0, 0, 0, 0.5),
-     rgba(0, 0, 0, 0.4)), url("../assets/img-11.jpg") ;
+     rgba(0, 0, 0, 0.4)), url("../assets/img-13.jpeg") ;
     background-size:cover;
     background-position: center;
     
