--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,6 +1,7 @@
 
 $primary:#3b37ff;
 
+
 @import "../../node_modules/bootstrap/scss/functions";
 @import "../../node_modules/bootstrap/scss/variables";
 @import "../../node_modules/bootstrap/scss/variables-dark";
@@ -8,9 +9,9 @@ $primary:#3b37ff;
 @import "../../node_modules/bootstrap/scss/mixins";
 
 // Contenido de bootstrap 
-
+$carousel-caption-width: 10%;
 @import "./Home.scss";
-
+$carousel-caption-width: 10%;
 
 @import "../../node_modules/bootstrap/scss/bootstrap";
 .header-container{
