Agregando nuevas paginas

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,64 +1,119 @@
 @charset "UTF-8";
-.text-home {
-  max-width: 1200px;
-  min-height: 180px;
-  max-height: 400px;
-  height: 250px;
+.home-seccions {
+  height: 100%;
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.4)), url("../assets/img-13.jpg");
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: top;
+  background-repeat: no-repeat;
+}
+.home-seccions .seccions {
+  min-height: 85vh;
+}
+.home-seccions .container-home {
+  background-color: rgba(0, 0, 0, 0.2);
+  backdrop-filter: blur(2px);
+}
+.home-seccions .container-home .text-home {
+  height: 100%;
   margin: auto;
   color: #ffffff;
-  background-image: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.4)), url("../assets/img-13.jpeg");
-  background-size: cover;
-  background-position: center;
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
 }
-
-.container-home {
-  position: relative;
-  overflow: hidden;
+.home-seccions .container-home .img__container-home {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-
-.img__home {
-  max-height: 350px;
-  min-height: 180px;
+.home-seccions .container-home .img__container-home div {
+  width: 350px;
+  height: 100%;
 }
-.img__home img {
+.home-seccions .container-home .img__container-home div img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
+/*
+ background-image:linear-gradient(to right, rgba(0, 0, 0, 0.5),
+     rgba(0, 0, 0, 0.4)), url("../assets/img-13.jpeg") ;
+    background-size:cover;
+    background-position: center;
+*/
 @media screen and (min-width: 768px) {
-  .text-home {
-    height: 350px;
-  }
-  .container-home {
-    padding: 30px;
-  }
-  .container-home::before {
-    position: absolute;
-    content: "";
-    inset: 0;
+  .home-seccions .container-home .img__container-home div {
     width: 100%;
-    height: 85%;
-    background-color: #171717;
-    z-index: -1;
-    border-radius: 12px;
   }
 }
-@media screen and (min-width: 992px) {
-  .text-home {
-    height: 400px;
-  }
-  .container-home::before {
-    position: absolute;
-    content: "";
-    inset: 0;
-    width: 100%;
-    height: 80%;
-    background-color: #171717;
-    z-index: -1;
-    border-radius: 12px;
-  }
+.card__menu-ropa {
+  width: 100%;
+  height: 100%;
 }
+.card__menu-ropa:hover > img {
+  transform: scale(1.05);
+  transition: all 0.3s ease-in-out;
+}
+.card__menu-ropa::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+.card__menu-ropa img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: relative;
+  transition: all 0.3s ease-in-out;
+}
+.card__menu-ropa p {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  font-size: 20px;
+  z-index: 1;
+}
+
+.products__container .card-product {
+  width: 100%;
+  height: 100%;
+}
+.products__container .card-product .img__card-product {
+  width: 100%;
+  min-height: 200px;
+  height: 300px;
+}
+.products__container .card-product .img__card-product img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  aspect-ratio: 3/2;
+}
+.products__container .card-product .label-off__card-product {
+  justify-content: center;
+  align-items: center;
+  top: 0;
+  right: 0;
+  border-radius: 4px;
+  padding: 10px 6px;
+}
+.products__container .card-product .label-off__card-product > .icon-off {
+  font-size: 25px;
+}
+.products__container .card-product .titles-card > p:first-child {
+  max-width: 30ch;
+}
+
+.icon-filter {
+  font-size: 25px;
+}
+
 /*!
  * Bootstrap  v5.3.3 (https://getbootstrap.com/)
  * Copyright 2011-2024 The Bootstrap Authors
@@ -6162,9 +6217,9 @@ textarea.form-control-lg {
 
 .carousel-caption {
   position: absolute;
-  right: 45%;
+  right: 15%;
   bottom: 1.25rem;
-  left: 45%;
+  left: 15%;
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
   color: #fff;
@@ -11919,6 +11974,10 @@ textarea.form-control-lg {
   border: none;
 }
 
+.form-select:focus {
+  box-shadow: none;
+}
+
 .dropdown-menu {
   border: none;
 }
@@ -11929,7 +11988,7 @@ textarea.form-control-lg {
 
 @media screen and (min-width: 768px) {
   .seccions {
-    max-width: 1400px;
+    max-width: 1300px;
     margin: auto;
   }
 }
