--- a/src/sass/Home.scss
+++ b/src/sass/Home.scss
@@ -1,72 +1,79 @@
-// Home 
-.text-home{
-    max-width: 1200px;
-    min-height: 180px;
-    max-height: 400px;
-    height: 250px;
-    margin: auto;
-    color: #ffffff;
-    background-image:linear-gradient(to right, rgba(0, 0, 0, 0.5),
+// Home
+.home-seccions {
+  height: 100%;
+  background-image: linear-gradient(
+      to right,
+      rgba(0, 0, 0, 0.6),
+      rgba(0, 0, 0, 0.4)
+    ),
+    url("../assets/img-13.jpg");
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: top;
+  background-repeat: no-repeat;
+  //background-color: rgb(51, 47, 255);
+  .seccions {
+    min-height: 85vh;
+  }
+  & .container-home {
+    background-color: rgba(0, 0, 0, 0.2);
+    backdrop-filter: blur(2px);
+
+    & .text-home {
+      height: 100%;
+      margin: auto;
+      color: #ffffff;
+      text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+    }
+    & .img__container-home {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      & div {
+        width: 350px;
+        height: 100%;
+        & img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
+      }
+    }
+  }
+//   .img__home {
+//     max-height: 350px;
+//     min-height: 180px;
+  
+//     & img {
+//       width: 100%;
+//       height: 100%;
+//       object-fit: cover;
+//     }
+//   }
+}
+
+/*
+ background-image:linear-gradient(to right, rgba(0, 0, 0, 0.5),
      rgba(0, 0, 0, 0.4)), url("../assets/img-13.jpeg") ;
     background-size:cover;
     background-position: center;
-    
-}
-
-.container-home{
-    position: relative;
-    overflow: hidden;
-   
-}
-
-.img__home{
-    max-height: 350px;
-    min-height: 180px;
-   
-    
-    & img{
-        width: 100%;
-        height: 100%;
-        object-fit:cover;
-    }
-}
-
-
-@media screen and (min-width:768px) {
-    .text-home{
-        height: 350px;
-    }
-
-    .container-home{
-        padding: 30px;
-        &::before{
-            position: absolute;
-            content: "";
-            inset: 0;
-            width: 100%;
-            height:85%;
-            background-color: #171717;
-            z-index:-1;
-            border-radius: 12px;
+*/
+@media screen and (min-width: 768px) {
+ 
+// Home
+.home-seccions {
+    & .container-home {
+      & .img__container-home {
+        
+        & div {
+          width: 100%;
         }
+      }
     }
+
+  }
+  
 }
 
-@media screen and (min-width:992px) {
-    .text-home{
-        height: 400px;
-    }
-
-    .container-home{
-        &::before{
-            position: absolute;
-            content: "";
-            inset: 0;
-            width: 100%;
-            height:80%;
-            background-color: #171717;
-            z-index:-1;
-            border-radius: 12px;
-        }
-    }
+@media screen and (min-width: 992px) {
 }
