--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2,23 +2,32 @@
 .home-seccions {
   height: 100%;
   background-image: linear-gradient(to right, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.4)), url("../assets/img-13.jpg");
-  background-attachment: fixed;
+  background-attachment: local;
   background-size: cover;
   background-position: top;
   background-repeat: no-repeat;
 }
 .home-seccions .seccions {
-  min-height: 85vh;
+  min-height: 60vh;
+  height: 100%;
 }
 .home-seccions .container-home {
+  height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
   backdrop-filter: blur(2px);
 }
 .home-seccions .container-home .text-home {
-  height: 100%;
-  margin: auto;
   color: #ffffff;
   text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+}
+.home-seccions .container-home .text-home > div {
+  height: 100%;
+}
+.home-seccions .container-home .text-home .btns__text-home {
+  width: 100%;
+}
+.home-seccions .container-home .text-home .btns__text-home button {
+  padding: 10px 0;
 }
 .home-seccions .container-home .img__container-home {
   display: flex;
@@ -26,7 +35,7 @@
   justify-content: center;
 }
 .home-seccions .container-home .img__container-home div {
-  width: 350px;
+  width: 320px;
   height: 100%;
 }
 .home-seccions .container-home .img__container-home div img {
@@ -35,15 +44,32 @@
   object-fit: cover;
 }
 
-/*
- background-image:linear-gradient(to right, rgba(0, 0, 0, 0.5),
-     rgba(0, 0, 0, 0.4)), url("../assets/img-13.jpeg") ;
-    background-size:cover;
-    background-position: center;
-*/
 @media screen and (min-width: 768px) {
+  .home-seccions .seccions {
+    min-height: 80vh;
+  }
+  .home-seccions .container-home .text-home .btns__text-home {
+    width: 100%;
+  }
+  .home-seccions .container-home .text-home .btns__text-home button {
+    padding: 12px 0;
+  }
   .home-seccions .container-home .img__container-home div {
     width: 100%;
+  }
+}
+@media screen and (min-width: 992px) {
+  .home-seccions {
+    background-attachment: fixed;
+  }
+  .home-seccions .seccions {
+    min-height: 85vh;
+  }
+  .home-seccions .container-home .text-home .btns__text-home {
+    max-width: 85%;
+  }
+  .home-seccions .container-home .text-home .btns__text-home button {
+    padding: 15px 0;
   }
 }
 .card__menu-ropa {
