--- a/src/sass/Home.scss
+++ b/src/sass/Home.scss
@@ -7,30 +7,40 @@
       rgba(0, 0, 0, 0.4)
     ),
     url("../assets/img-13.jpg");
-  background-attachment: fixed;
+  background-attachment: local;
   background-size: cover;
   background-position: top;
   background-repeat: no-repeat;
   //background-color: rgb(51, 47, 255);
   .seccions {
-    min-height: 85vh;
+    min-height: 60vh;
+    height: 100%;
   }
   & .container-home {
+    height: 100%;
     background-color: rgba(0, 0, 0, 0.2);
     backdrop-filter: blur(2px);
 
     & .text-home {
-      height: 100%;
-      margin: auto;
       color: #ffffff;
       text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+      & > div {
+        height: 100%;
+      }
+
+      & .btns__text-home {
+        width: 100%;
+        & button {
+          padding: 10px 0;
+        }
+      }
     }
     & .img__container-home {
-        display: flex;
-        align-items: center;
-        justify-content: center;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       & div {
-        width: 350px;
+        width: 320px;
         height: 100%;
         & img {
           width: 100%;
@@ -40,40 +50,50 @@
       }
     }
   }
-//   .img__home {
-//     max-height: 350px;
-//     min-height: 180px;
-  
-//     & img {
-//       width: 100%;
-//       height: 100%;
-//       object-fit: cover;
-//     }
-//   }
+ 
 }
 
-/*
- background-image:linear-gradient(to right, rgba(0, 0, 0, 0.5),
-     rgba(0, 0, 0, 0.4)), url("../assets/img-13.jpeg") ;
-    background-size:cover;
-    background-position: center;
-*/
+
 @media screen and (min-width: 768px) {
- 
-// Home
-.home-seccions {
+  // Home
+  .home-seccions {
+    .seccions {
+      min-height: 80vh;
+    }
     & .container-home {
+      & .text-home {
+        & .btns__text-home {
+          width: 100%;
+          & button {
+            padding: 12px 0;
+          }
+        }
+      }
       & .img__container-home {
-        
         & div {
           width: 100%;
         }
       }
     }
-
   }
-  
 }
 
 @media screen and (min-width: 992px) {
+  .home-seccions {
+    background-attachment: fixed;
+    //background-color: rgb(51, 47, 255);
+    .seccions {
+      min-height: 85vh;
+    }
+    & .container-home {
+        & .text-home {
+              & .btns__text-home{
+                  max-width: 85%;
+                  & button{
+                      padding: 15px 0;
+                  }
+              }
+          }
+    }
+  }
 }
