--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -12,7 +12,7 @@ $primary:#3b37ff;
 @import "./Home.scss";
 @import "./Ropa-home.scss";
 @import "./view-products.scss";
-
+@import "./Footer.scss";
 
 @import "../../node_modules/bootstrap/scss/bootstrap";
 .header-container{
