--- a/src/sass/Home.scss
+++ b/src/sass/Home.scss
@@ -52,6 +52,46 @@
   }
  
 }
+// product off
+
+
+.mySwiper{
+  .swiper-button-prev,
+  .swiper-button-next{
+      --swiper-theme-color:rgb(59, 55, 255);
+      background-color: rgba(255, 255, 255,.6);
+      --swiper-navigation-size: 25px;
+      height: 42px;
+      width: 42px;
+      padding: 4px;
+      margin-top: -24px;
+
+  }
+  .swiper-button-prev{
+      border-radius: 50px;
+      left: 1px;
+  }
+  .swiper-button-next{
+      border-radius: 50px;
+      right: 1px;
+  }
+
+  @media screen and (min-width:768px) {
+      .swiper-button-prev,
+      .swiper-button-next{
+          --swiper-navigation-size: 32px;
+          height: 50px;
+          width: 50px;
+          margin-top: -25px;
+      }
+      .swiper-button-prev{
+          left: -15px;
+      }
+      .swiper-button-next{
+          right: -15px;
+      }
+  }
+}
 
 
 @media screen and (min-width: 768px) {
