--- a/src/css/main.css
+++ b/src/css/main.css
@@ -8,7 +8,7 @@
   background-repeat: no-repeat;
 }
 .home-seccions .seccions {
-  min-height: 60vh;
+  min-height: 70vh;
   height: 100%;
 }
 .home-seccions .container-home {
@@ -62,20 +62,16 @@
   border-radius: 50px;
   right: 1px;
 }
-@media screen and (min-width: 768px) {
-  .mySwiper .swiper-button-prev,
-  .mySwiper .swiper-button-next {
-    --swiper-navigation-size: 32px;
-    height: 50px;
-    width: 50px;
-    margin-top: -25px;
-  }
-  .mySwiper .swiper-button-prev {
-    left: -15px;
-  }
-  .mySwiper .swiper-button-next {
-    right: -15px;
-  }
+.mySwiper .card-carousel {
+  min-width: 120px;
+}
+.mySwiper .card-carousel .card-img {
+  min-height: 130px;
+}
+.mySwiper .card-carousel .card-img img {
+  width: 100%;
+  object-fit: cover;
+  aspect-ratio: 3/3.5;
 }
 
 @media screen and (min-width: 768px) {
@@ -90,6 +86,22 @@
   }
   .home-seccions .container-home .img__container-home div {
     width: 100%;
+  }
+  .mySwiper .swiper-button-prev,
+  .mySwiper .swiper-button-next {
+    --swiper-navigation-size: 32px;
+    height: 50px;
+    width: 50px;
+    margin-top: -25px;
+  }
+  .mySwiper .swiper-button-prev {
+    left: -15px;
+  }
+  .mySwiper .swiper-button-next {
+    right: -15px;
+  }
+  .card-carousel {
+    min-width: 110px;
   }
 }
 @media screen and (min-width: 992px) {
