--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,23 +9,31 @@ $primary:#3b37ff;
 @import "../../node_modules/bootstrap/scss/mixins";
 
 // Contenido de bootstrap 
+@import "./Header.scss";
 @import "./Home.scss";
 @import "./Ropa-home.scss";
 @import "./view-products.scss";
 @import "./Footer.scss";
 
 @import "../../node_modules/bootstrap/scss/bootstrap";
-.header-container{
-    max-width: 95%;
-    width: 100%;
-    margin: auto;
+
+html, body{
+  background-color: rgb(255, 255, 255);
 }
-
-
+.mt-seccions-index {
+  margin-top: 100px !important;
+}
 .user-icon{
-    font-size: 35px;
+    font-size: 45px;
+    color: #000000;
+}
+.icon-bag{
+  font-size: 30px;
 }
 
+.navbar-nav .nav-item span{
+  color: #000000 !important;
+}
 .navbar-toggler:focus{
     box-shadow: none ;
     border: none
@@ -58,7 +66,7 @@ $primary:#3b37ff;
        }
        
        label span{
-         background: #bc2525;
+         background: #000000;
          border-radius:10px;
          height:3px;
          margin: 3px 0;
@@ -90,7 +98,7 @@ $primary:#3b37ff;
        
        input[type="checkbox"]:checked ~ span:nth-of-type(1){
          transform-origin:bottom;
-         transform:rotatez(45deg) translate(2px,0px)
+         transform:rotatez(45deg) translate(3px,0px)
        }
        
        
@@ -105,7 +113,7 @@ $primary:#3b37ff;
          
          transform-origin:bottom;
          width:50%;
-         transform: translate(14px,-3px) rotatez(45deg);
+         transform: translate(15px,-3px) rotatez(45deg);
        
        }
  
