--- a/src/sass/Footer.scss
+++ b/src/sass/Footer.scss
@@ -1,6 +1,6 @@
 .footer-container{
     color: #ffffff;
-    background-color: #0e0e0e;
+    background-color: #000000;
     & .seccions{
         background-color: transparent;
     }
