--- a/src/sass/Home.scss
+++ b/src/sass/Home.scss
@@ -1,30 +1,27 @@
 // Home
 .home-seccions {
-  
   height: 100%;
-  background-image: linear-gradient(
-      to right,
-      rgba(0, 0, 0, 0.6),
-      rgba(0, 0, 0, 0.4)
-    ),
-    url("../assets/img-13.jpg");
-  background-attachment: local;
-  background-size: cover;
-  background-position: top;
-  background-repeat: no-repeat;
+  background-color: #f2f2f2;
+  // background-image: linear-gradient(
+  //     to right,
+  //     rgba(255, 255, 255, .3),
+  //     rgba(0, 0, 0, .1)
+  //   ),
+  //   url("../assets/man-img.png");
+  // background-attachment: local;
+  // background-size:260px;
+  // background-position: center bottom;
+  // background-repeat: no-repeat;
   //background-color: rgb(51, 47, 255);
   .seccions {
-    min-height: 75vh;
+    min-height: 70vh;
     height: 100%;
-    background-color: transparent;
   }
   & .container-home {
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.2);
-    backdrop-filter: blur(2px);
 
     & .text-home {
-      color: #ffffff;
+      color: #000000;
       text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
       & > div {
         height: 100%;
@@ -42,66 +39,69 @@
       align-items: center;
       justify-content: center;
       & div {
-        width: 320px;
+        width: 240px;
         height: 100%;
         & img {
           width: 100%;
           height: 100%;
           object-fit: cover;
+          mask-image: linear-gradient(#f2f2f2 80%, transparent);
         }
       }
     }
   }
- 
 }
 // popular container
-.container-popular{
+.container-popular {
   & .card-popular {
+    max-width: 300px;
+    width: 130px;
+    height: 100%;
     transition: all 0.3s ease-in-out;
-     &:hover{
-       transform: scale(1.05);
-       transition: all 0.3s ease-in-out;
-     }
+    &:hover {
+      transform: scale(1.05);
+      transition: all 0.3s ease-in-out;
+    }
+    & img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      aspect-ratio: 3/2;
+    }
   }
 }
 
 // product off
-.mySwiper{
+.mySwiper {
   .swiper-button-prev,
-  .swiper-button-next{
-      --swiper-theme-color:rgb(59, 55, 255);
-      background-color: rgba(255, 255, 255,.6);
-      --swiper-navigation-size: 25px;
-      height: 42px;
-      width: 42px;
-      padding: 4px;
-      margin-top: -24px;
-
+  .swiper-button-next {
+    --swiper-theme-color: rgb(59, 55, 255);
+    background-color: rgba(255, 255, 255, 0.6);
+    --swiper-navigation-size: 25px;
+    height: 42px;
+    width: 42px;
+    padding: 4px;
+    margin-top: -24px;
   }
-  .swiper-button-prev{
-      border-radius: 50px;
-      left: 1px;
+  .swiper-button-prev {
+    left: 1px;
   }
-  .swiper-button-next{
-      border-radius: 50px;
-      right: 1px;
+  .swiper-button-next {
+    right: 1px;
   }
 
-  .card-carousel{
+  .card-carousel {
     min-width: 120px;
-    & .card-img{
+    & .card-img {
       min-height: 130px;
-      & img{
+      & img {
         width: 100%;
         object-fit: cover;
         aspect-ratio: 3/3.5;
       }
     }
   }
-
 }
-
-
 
 @media screen and (min-width: 768px) {
   // Home
@@ -120,49 +120,72 @@
       }
       & .img__container-home {
         & div {
-          width: 100%;
+          width: 350px;
         }
       }
     }
   }
 
-  .mySwiper{
+  .mySwiper {
     .swiper-button-prev,
-      .swiper-button-next{
-          --swiper-navigation-size: 32px;
-          height: 50px;
-          width: 50px;
-          margin-top: -25px;
-      }
-      .swiper-button-prev{
-          left: -15px;
-      }
-      .swiper-button-next{
-          right: -15px;
-      }
+    .swiper-button-next {
+      --swiper-navigation-size: 32px;
+      height: 50px;
+      width: 50px;
+      margin-top: -25px;
+    }
+    .swiper-button-prev {
+      left: -15px;
+    }
+    .swiper-button-next {
+      right: -15px;
+    }
   }
-  .card-carousel{
+  .card-carousel {
     min-width: 110px;
-    
+  }
+
+  // popular container
+
+  .container-popular {
+    & .card-popular {
+      width: 250px;
+    }
   }
 }
 
 @media screen and (min-width: 992px) {
   .home-seccions {
-    background-attachment: fixed;
     //background-color: rgb(51, 47, 255);
+    background-size: auto;
     .seccions {
       min-height: 90vh;
     }
     & .container-home {
-        & .text-home {
-              & .btns__text-home{
-                  max-width: 85%;
-                  & button{
-                      padding: 15px 0;
-                  }
-              }
+      & .text-home {
+        & .btns__text-home {
+          max-width: 85%;
+          & button {
+            padding: 15px 0;
           }
+        }
+      }
+      & .img__container-home {
+        & div {
+          width: 100%;
+          height: 100%;
+          & img {
+            width: auto;
+          }
+        }
+      }
+    }
+  }
+  // popular container
+
+  .container-popular {
+    & .card-popular {
+      width: 300px;
     }
   }
 }
