--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -14,6 +14,7 @@ $headings-font-family:"Oswald", sans-serif;
 @import "./Ropa-home.scss";
 @import "./view-products.scss";
 @import "./Footer.scss";
+@import "./Client.scss";
 
 @import "../../node_modules/bootstrap/scss/bootstrap";
 
