--- a/src/sass/Home.scss
+++ b/src/sass/Home.scss
@@ -2,17 +2,7 @@
 .home-seccions {
   height: 100%;
   background-color: #f2f2f2;
-  // background-image: linear-gradient(
-  //     to right,
-  //     rgba(255, 255, 255, .3),
-  //     rgba(0, 0, 0, .1)
-  //   ),
-  //   url("../assets/man-img.png");
-  // background-attachment: local;
-  // background-size:260px;
-  // background-position: center bottom;
-  // background-repeat: no-repeat;
-  //background-color: rgb(51, 47, 255);
+  
   .seccions {
     min-height: 70vh;
     height: 100%;
@@ -22,7 +12,12 @@
 
     & .text-home {
       color: #000000;
-      text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+      & .text__container-home{
+        & h1{
+          font-size: 45px;
+        }
+      }
+
       & > div {
         height: 100%;
       }
@@ -54,10 +49,10 @@
 // popular container
 .container-popular {
   & .card-popular {
-    max-width: 300px;
-    width: 130px;
-    height: 100%;
     transition: all 0.3s ease-in-out;
+    & p{
+      font-size: 15px;
+    }
     &:hover {
       transform: scale(1.05);
       transition: all 0.3s ease-in-out;
@@ -66,7 +61,7 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
-      aspect-ratio: 3/2;
+      aspect-ratio:4/3;
     }
   }
 }
@@ -149,7 +144,9 @@
 
   .container-popular {
     & .card-popular {
-      width: 250px;
+      & p{
+        font-size: 15px;
+      }
     }
   }
 }
@@ -159,12 +156,17 @@
     //background-color: rgb(51, 47, 255);
     background-size: auto;
     .seccions {
-      min-height: 90vh;
+      min-height: 80vh;
     }
     & .container-home {
       & .text-home {
+        & .text__container-home{
+          max-width: 90%;
+          & h1{
+            font-size: 65px;
+          }
+        }
         & .btns__text-home {
-          max-width: 85%;
           & button {
             padding: 15px 0;
           }
@@ -175,7 +177,9 @@
           width: 100%;
           height: 100%;
           & img {
-            width: auto;
+            width: 100%;
+            object-fit: contain;
+            aspect-ratio: 3/3;
           }
         }
       }
@@ -183,9 +187,9 @@
   }
   // popular container
 
-  .container-popular {
-    & .card-popular {
-      width: 300px;
-    }
-  }
+  // .container-popular {
+  //   & .card-popular {
+  //     width: 300px;
+  //   }
+  // }
 }
