--- a/src/sass/Header.scss
+++ b/src/sass/Header.scss
@@ -2,8 +2,7 @@
   max-width: 100%;
   width: 100%;
   margin: auto;
-  background-color: white;
-  backdrop-filter: blur(8px) ;
+  background-color: transparent;
   position: fixed;
   width: 100%;
   top: 0;
