--- a/src/sass/Home.scss
+++ b/src/sass/Home.scss
@@ -24,7 +24,7 @@
 
       & .btns__text-home {
         width: 100%;
-        & button {
+        & .btn-button {
           padding: 10px 0;
         }
       }
