--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -15,6 +15,8 @@ $headings-font-family:"Oswald", sans-serif;
 @import "./view-products.scss";
 @import "./Footer.scss";
 @import "./Client.scss";
+@import "./Profile.scss";
+
 
 @import "../../node_modules/bootstrap/scss/bootstrap";
 
